// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button field should render button 1`] = `
<div
  className=""
>
  <button
    className="btn"
    id="myForm"
    onClick={[Function]}
    type="button"
  >
    Boom !
  </button>
  <Message
    description="Click here to trigger a trigger"
    errorMessage="This is wrong"
    isValid={true}
  />
</div>
`;

exports[`Button field should render button with provided type 1`] = `
<div
  className=""
>
  <button
    className="btn"
    id="myForm"
    onClick={[Function]}
    type="submit"
  >
    Boom !
  </button>
  <Message
    description="Click here to trigger a trigger"
    errorMessage="This is wrong"
    isValid={true}
  />
</div>
`;

exports[`Button field should render error button if it is not valid 1`] = `
<div
  className="has-error"
>
  <button
    className="btn"
    id="myForm"
    onClick={[Function]}
    type="button"
  >
    Boom !
  </button>
  <Message
    description="Click here to trigger a trigger"
    errorMessage="This is wrong"
    isValid={false}
  />
</div>
`;
